# LANimals

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
.hermes/plans/: 2026-07-15_135727-lanimals-mvp.md
lanimals/: __init__.py  __main__.py  cli.py  config.py  identity.py  limits.py  main.py  network.py  realtime.py  store.py
lanimals/web/: app.css  app.js  index.html
lanimals/web/locales/: en.json  zh-CN.json
tests/: test_concurrency.py  test_config_cli.py  test_entrypoint.py  test_files.py  test_identity.py  test_login.py  test_messages.py  test_network.py  test_packaging.py  test_password_rotation.py  test_realtime.py  test_web.py
