[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lanimals"
version = "0.1.0"
description = "A lightweight local-network group chat with animal device identities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "python-multipart>=0.0.9,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "httpx>=0.27,<1.0",
]

[project.scripts]
lanimals = "lanimals.__main__:main"

[tool.setuptools.package-data]
lanimals = ["web/*.html", "web/*.css", "web/*.js", "web/locales/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
